# QAQ-QQ-AI-QUEST

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  config.json  config_copy.json  context_database.db  start.bat  start.sh  structure.md
config_new/: AI觉醒者（元认知泄漏）.json  config_new_1.json  config_new_2.json  config_new_3.json  商业间谍（双面人格）.json  心理咨询师.json  心理咨询师（隐藏身份）.json  普通大学生.json  网络魔怔人.json  郁郁症患者.json  黑市中间商（风险管控）.json
fore-end/: README.md  package-lock.json  package.json  vite.config.js  vite.config.js:Zone.Identifier
fore-end/src/: App.vue  main.js  main.js:Zone.Identifier  utils.js
fore-end/src/assets/: main.css  main.min.css  main.scss
fore-end/src/components/: AddQQId.vue  Parameter.vue  ParameterPage.vue  UsageStats.vue
src/: config.rs  db.rs  handlers.rs  lib.rs  main.rs  pipeline.rs  routes.rs  services.rs
src/ll_one_bot/: interface.rs
