[package]
name = "QAQ"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1.17"
sqlx = { version = "0.8.1", features = ["runtime-tokio-native-tls", "sqlite"] }